<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".invoice_generator.InvoiceGeneratorFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/app_background_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:title="@string/invoice_generator" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/childNameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rectangle_border"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/child_full_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <EditText
        android:id="@+id/yearEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_border"
        android:hint="@string/year"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/_2024"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/monthEt"
        app:layout_constraintTop_toBottomOf="@id/childNameTv" />

    <EditText
        android:id="@+id/monthEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_border"
        android:hint="@string/month"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="Yanvar"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/yearEt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/childNameTv" />


    <EditText
        android:id="@+id/sumEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_border"
        android:hint="@string/_248_000_som"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/_248_000_som"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monthEt" />


    <ImageView
        android:id="@+id/invoiceIv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:importantForAccessibility="no"
        android:src="@drawable/invoice_template"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/shareBtn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_corner"
        android:backgroundTint="@color/app_blue"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>