<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/app_background_color"
    android:orientation="vertical"
    tools:context=".add_child.AddChildFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/app_background_color">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:title="@string/add_child" />
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/childNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rectangle_border"
        android:hint="@string/child_full_name"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="?attr/app_text_color" />

    <EditText
        android:id="@+id/childIdEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_border"
        android:hint="@string/child_id"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="?attr/app_text_color" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_corner"
        android:backgroundTint="@color/app_blue"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>